Make menu consistent
Additionally:

- Fix enablemenet of "Copy to"
- Rename variables
- Use "toList()" instead of collect(Collectors.toList())